--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=FB4BD5E448435E12E47A6286801FA296
-ProjectName=Third Person BP Game Template
+ProjectName=ShieldGame
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
