Clean & Rename ShieldGame

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,14 +2,15 @@
 GameName=ShieldGame
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/ShieldGame/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/ShieldGame/Maps/ShieldGameMap.ShieldGameMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
+ServerDefaultMap=/Game/ShieldGame/Maps/ShieldGameMap.ShieldGameMap
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
