add create & join session (multi)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=ShieldGame
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ShieldGame/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/ShieldGame/Maps/Menu/MainMenu.MainMenu
+GameDefaultMap=/Game/ShieldGame/Maps/Menu/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
